# ArchitectureAssistant

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-FAQ.md  README.md  index.html  package-lock.json  package.json  vsArchitecture.json
css/: styles.css
metaModels/: NAFv4-ADMBw-2025.10.meta.json  architectureMetaModel.schema.json  catalog.json
scripts/: app.js  release-electron.sh
scripts/core/: DataModel.js  EventManager.js  GuiManager.js
src-electron/: main.cjs  preload.cjs
src-electron/scripts/: run-dev.cjs  run-prod.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: prepare-frontend-dist.sh  start-dev-server.sh
src-tauri/src/: main.rs
